fix: 🐛 Gear sheet with broken layout - Fixes #505

--- a/src/legacy-styles/sheets/tab/_gear.scss
+++ b/src/legacy-styles/sheets/tab/_gear.scss
@@ -157,6 +157,11 @@
 						border-radius: 10px;
 						color: var(--color-theme-text);
 					}
+					div {
+						display: flex;
+						gap: 10px;
+						align-items: center;
+					}
 				}
 
 				button {
